# otus-python-developer-2025

./: .gitignore  README.md
.github/workflows/: final_project.yml  hm_1.yml  hm_10.yml  hm_11.yml  hm_14.yml  hm_16.yml  hm_2.yml  hm_3.yml  hm_4.yml  hm_5.yml  hm_6.yml  hm_7.yml  hm_8.yml  hm_9.yml
final_project/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini
final_project/config/grafana/data/: grafana.db
final_project/config/grafana/data/plugins/grafana-lokiexplore-app/: MANIFEST.txt
final_project/config/grafana/datasources/: grafana.yaml
final_project/config/prometheus/: prometheus.yml
final_project/config/prometheus/data/chunks_head/: 000001
final_project/config/prometheus/data/data/01K2264QXCR4T658CNKFAK4ERT/: index  meta.json
final_project/config/prometheus/data/data/01K2264QXCR4T658CNKFAK4ERT/chunks/: 000001
final_project/config/prometheus/data/data/01K229W755HMNQPCB83KN39H4V/: index  meta.json
final_project/config/prometheus/data/data/01K229W755HMNQPCB83KN39H4V/chunks/: 000001
final_project/config/prometheus/data/data/01K229W79WA77G6JWB0TWCGEF2/: index  meta.json
final_project/config/prometheus/data/data/01K229W79WA77G6JWB0TWCGEF2/chunks/: 000001
final_project/config/prometheus/data/data/01K22GQYE623GQ66H9B720S6BD/: index  meta.json
final_project/config/prometheus/data/data/01K22GQYE623GQ66H9B720S6BD/chunks/: 000001
final_project/config/prometheus/data/data/chunks_head/: 000001  000002  000003  000004  000005
final_project/config/prometheus/data/data/wal/: 00000000  00000001  00000002  00000003  00000004  00000005  00000006  00000007  00000008  00000009  00000012  00000013  00000014  00000015
final_project/config/prometheus/data/data/wal/checkpoint.00000011/: 00000000
final_project/config/prometheus/data/wal/: 00000000  00000001  00000002  00000003
final_project/config/promtail/: promtail.yaml
final_project/config/promtail/data/: positions.yaml
final_project/indexer/: __init__.py  collector.py  config.py  metrics.py  parser.py  schema.py  utils.py  validator.py
final_project/tests/: test_imports.py  test_indexer.py
hm_09/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
hm_09/app/: app.py
hm_09/tests/: test_app.py
hm_1/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  log.txt  pyproject.toml
hm_1/config/: config.json
hm_1/docs/: README.md
hm_1/reports/: report-2017.06.30.html
hm_1/src/: log_analyzer.py
hm_1/tests/: test_log_analyzer.py
hm_10/: .gitignore  README.md  pyproject.toml  requirements.txt
hm_10/app/: app.py
hm_11/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  homework.ipynb  pyproject.toml
hm_11/dmia/: gradient_check.py
hm_11/dmia/classifiers/: logistic_regression.py
hm_11/tests/: test_logistic_regression.py
hm_12/notebooks/: titanik-eda-logistic-regresion.ipynb
hm_14/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
hm_16/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
hm_16/src/: crawler.py  storage.py
hm_16/tests/: test_crawler.py
hm_2/: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  basic.py  intermediate.py  pyproject.toml
hm_3/: .gitignore  Makefile  README.md  pyproject.toml
hm_3/byterun/: __init__.py  exceptions.py  pyobj.py  pyvm.py
hm_3/examples/: simple_example.py
hm_3/tests/: test_basic.py  test_functions.py
hm_4/: .flake8  .gitignore  Makefile  README.md  api.py  pyproject.toml  scoring.py  test.py
hm_5/: .flake8  .gitignore  Dockerfile  Makefile  README.md  api.py  docker-compose.yml  pyproject.toml  scoring.py  store.py  test.py  test_integration.py
hm_6/: .gitignore  .pylintrc  Makefile  README.md  demo.py  main.py  pyproject.toml
hm_6/domain/: __init__.py  exceptions.py  models.py  repositories.py  services.py  unit_of_work.py
hm_6/infrastructure/: __init__.py  database.py  orm.py  repositories.py  unit_of_work.py
hm_6/tests/: conftest.py  test_integration.py
hm_6/tests/test_domain/: test_models.py  test_services.py
hm_6/tests/test_infrastructure/: test_repositories.py  test_unit_of_work.py
hm_7/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  performance_result_20250622_213012.txt  pyproject.toml  pytest.ini
hm_7/docs/: index.html
hm_7/docs/httptest/: wikipedia_russia.html
hm_7/scripts/: run_server.py  stop_server.py
hm_7/src/: httpd.py
hm_7/src/handler/: handler.py
hm_7/src/protocol/: request.py  response.py
hm_7/src/server/: server.py
hm_7/tests/: test_file_service.py  test_server.py
hm_8/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
