[tool.poetry]
name = "hm_1"
description = "A simple log analyzer"
authors = ["German Kovalev <your.email@example.com>"]
version = "0.1.0"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^25.2.0"
pytest = "^8.3.5"
flake8 = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pyupgrade = "^3.15.2"
ruff = "^0.4.6"
uv = "^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"