[tool.poetry]
name = "homework-09"
version = "0.1.0"
description = ""
authors = ["Vladislav Kozlov <vlad.kv.2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.11.3"
passlib = "^1.7.4"
jwt = "^1.3.1"
pylint = "^3.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
