[project]
name = "hm-4"
version = "0.1.0"
description = "Scoring API with declarative validation"
authors = [
    {name = "German Kovalev", email = "german.n.kovalev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "black>=24.10.0",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "isort>=5.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
